--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
-  "name": "geometry",
+  "name": "geometry-editor",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://abrahamfourteen.github.io/Geometry-drawing-tool/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.8",
     "@testing-library/react": "^11.2.3",
@@ -17,9 +16,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
